add layout html and css

--- a/src/templates/article/index.html
+++ b/src/templates/article/index.html
@@ -11,7 +11,7 @@
 {% block content %}
 <p>{{ Message }}</p>
 <p>{{ Now }}</p>
-<h2>記事一覧</h2>
+<h2>記事一覧aaa</h2>
 <ul>
   {% for article in Articles %}
   <li>{{article.ID}}.{article.Title}</li>
