--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="/css/layout.css">
   <title>{% block title %} MyTechBlog{% endblock %}</title>
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
+
   {% block css %}{% endblock %}
 </head>
 
@@ -33,7 +35,7 @@
         <li class="footer_menu_item"><a href="">運営者</a></li>
       </ul>
       <div class="footer_copy-right">
-        © 2022 HarukiIdo Tech Blog 
+        © 2022 HarukiIdo Tech Blog
       </div>
     </div>
   </footer>
