introduce package of air

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -10,9 +10,8 @@
   <link rel="stylesheet" href="/css/layout.css">
   <title>{% block title %} MyTechBlog{% endblock %}</title>
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
-
   {% block css %}{% endblock %}
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
 </head>
 
 <body>
@@ -29,7 +28,7 @@
   <footer>
     <div class="footer">
       <ul class="footer_menu">
-        <li class="footer_menu_item"><a href="">Twitter</a></li>
+        <li class="footer_menu_item"><a href="">aaaaTwitter</a></li>
         <li class="footer_menu_item"><a href="">GitHub</a></li>
         <li class="footer_menu_item"><a href="">プライバシーポリシー</a></li>
         <li class="footer_menu_item"><a href="">運営者</a></li>
