add feature preview

--- a/src/templates/article/new.html
+++ b/src/templates/article/new.html
@@ -3,9 +3,12 @@
 {% block css %}
 <link rel="stylesheet" href="/css/article/new.css">
 <link rel="stylesheet" href="/css/article/_form.css">
+<link rel="stylesheet" href="/css/article/_article.css">
 {% endblock %}
 
 {% block js %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/2.0.0/remarkable.min.js"></script>
+<script src="/js/module/parser.js"></script>
 <script src="/js/module/form.js"></script>
 <script src="/js/article/new.js"></script>
 {% endblock %}
