--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -28,7 +28,7 @@
   <footer>
     <div class="footer">
       <ul class="footer_menu">
-        <li class="footer_menu_item"><a href="">aaaaTwitter</a></li>
+        <li class="footer_menu_item"><a href="">Twitter</a></li>
         <li class="footer_menu_item"><a href="">GitHub</a></li>
         <li class="footer_menu_item"><a href="">プライバシーポリシー</a></li>
         <li class="footer_menu_item"><a href="">運営者</a></li>
