add process of create article and display list of article

--- a/src/templates/article/index.html
+++ b/src/templates/article/index.html
@@ -14,7 +14,7 @@
 <h2>記事一覧aaa</h2>
 <ul>
   {% for article in Articles %}
-  <li>{{article.ID}}.{article.Title}</li>
+  <li>{{article.ID}}.{{article.Title}}</li>
   {% endfor %}
 </ul>
 {% endblock %}
