fix detail page view

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <link rel="stylesheet" href="/css/layout.css">
+  <link rel="icon" href="data:,">
   <title>{% block title %} MyTechBlog{% endblock %}</title>
 
   {% block css %}{% endblock %}
