--- a/src/templates/article/index.html
+++ b/src/templates/article/index.html
@@ -6,6 +6,7 @@
 
 {% block js %}
 <script src="/js/article/index.js"></script>
+<script src="/js/module/switch.js"></script>
 {% endblock %}
 
 {% block content %}
