--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -33,10 +33,9 @@
   <footer>
     <div class="footer">
       <ul class="footer_menu">
-        <li class="footer_menu_item"><a href="">Twitter</a></li>
-        <li class="footer_menu_item"><a href="">GitHub</a></li>
-        <li class="footer_menu_item"><a href="">プライバシーポリシー</a></li>
-        <li class="footer_menu_item"><a href="">運営者</a></li>
+        <li class="footer_menu_item"><a href="https://twitter.com/haruriku17">Twitter</a></li>
+        <li class="footer_menu_item"><a href="https://github.com/HarukiIdo">GitHub</a></li>
+        <li class="footer_menu_item"><a href="https://harukiido.github.io/">運営者</a></li>
       </ul>
       <div class="footer_copy-right">
         © 2022 HarukiIdo Tech Blog
